--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae Justine Ruysschaert</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <table>
         <tbody>
             <tr>
                 <td>
-                    <img src="/Users/justine/Desktop/Personal_Site/Foto_grappig.jpg" width="375" height="500">
+                    <img src="images/Foto_grappig.jpg" width="375" height="500">
                 </td>
                 <td>
                     <h1>Hi! I am Justine, a junior programmer and 3D artist</h1>
