--- a/email-me.html
+++ b/email-me.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Email me!</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <form class="" action="mailto:justine.ruysschaert@gmail.com" method="post" enctype="text/plain">
